--- a/f3.css
+++ b/f3.css
@@ -51,6 +51,12 @@ body {
     margin: 0 10px;
     cursor: pointer;
   }
+  .lang-lang{
+    display: flex;
+    gap: 30px;
+    align-items: center;
+    margin-bottom: 20px;
+  }
 
   .lang-row {
     display: flex;
@@ -62,3 +68,21 @@ body {
   .lang-row label {
     flex: 1;
   }
+  .lang-lang1{
+   
+    gap: 80px;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+
+  .lang-row1 {
+ align-items: center;
+ gap: 50px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+  }
+
+  .lang-row1 label {
+    flex: 1;
+  }
+
